<resources>
    <string name="app_name">AttendEase</string>
    <string name="attendease">AttendEase</string>
    <string name="get_started_by_logging_in_to_your_account_or_creating_a_new_one">Get started by logging in to your account or creating a new one.</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or_login_with">Or login with</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="let_s_sign_in">Your smart attendance companion</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account_sign_up">Already have an account? Sign up</string>
    <string name="default_web_client_id"> 246473705713-pm3mk17lashir3tk1d0flr9ggu5oev2m.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="manage_classes">Manage Classes</string>
    <string name="_reports">Attendance Reports</string>
    <string name="teacher">Teacher</string>
    <string name="attend_ease">Attend Ease</string>
    <string name="schedule_class">Schedule Class</string>
    <string name="select_end_time">Select end time</string>
    <string name="end_time">End Time</string>
    <string name="select_start_time">Select start time</string>
    <string name="start_time">Start Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_structures">Data Structures</string>
    <string name="cs_101">CS-101</string>
    <string name="_09_00_am_10_30_am">09:00 AM - 10:30 AM</string>
    <string name="start">Start </string>
    <string name="date_25th_dec_2024">Date: 25th Dec 2024</string>
    <string name="session_qr_code">Session QR Code</string>
    <string name="scan_this_qr_code_to_join_the_session">Scan this QR code to join the session</string>
    <string name="today">Today</string>
    <string name="_12_17_pm">12:17 PM</string>
    <string name="present">Present</string>
    <string name="ricky_paran">Ricky Paran</string>
    <string name="welcome_back">Welcome Back!</string>
</resources>