<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp"
    android:background="@drawable/bglogin"
    tools:context=".ui.onboarding.OnboardingActivity"
    android:id="@+id/onboardingOptionLayout">

    <!-- Header Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendease"
        android:fontFamily="@font/comic_relief_bold"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        android:layout_marginTop="200dp" />


    <!-- Description Text -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started_by_logging_in_to_your_account_or_creating_a_new_one"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:lineSpacingExtra="4sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/RoundedButton.Outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>