<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".ui.dashboard.MainNavigationActivity"
    android:id="@+id/mainNavigation">





    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivoblack"
        android:text="@string/attend_ease"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_white"
        android:fontFamily="@font/archivoblack"
        android:text="@string/teacher"
        android:textColor="@color/blue"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvTeacher">

        <!-- Create Employee Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvManageClasses"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/classes"
                    android:contentDescription="@string/_reports"
                    android:layout_marginBottom="10dp"/>

                <!-- Text at bottom -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/manage_classes"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Employee List Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvAttendanceReport"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#4CAF50"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/_reports"
                    android:src="@drawable/attendancereport"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/_reports"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>